# sibernetic

./: .cproject  .gitignore  .openworm.yml  .project  CMakeLists.txt  LICENSE  README.md  Sibernetic.sln  Sibernetic.vcproj  Sibernetic.vcxproj  SimulationEnginePrototype.sln  SimulationEnginePrototype.vcproj  Smoothed-Particle-Hydrodynamics  SphFluid_GLUT.sln  SphFluid_GLUT.vcproj  VectorMath.h  api.h  engine.cpp  engine.h  graphics.cpp  graphics.h  index.html  main_sim.py  makefile  makefile.OSX  makefile_clang  params.json  plot_positions.py  readme.txt  run.sh  run_all_tests.sh  sibernetic_c302.py  sibernetic_c302_env.sh  sph.cpp  sph.h  sphFluidDemo.cl  sphFluidDemoTest.cpp
.github/workflows/: ci-build-intel.yml  ci-build.yml
20 cm long worm/: main_sim.py  owPhysicsConstant.h  sphFluid.cl
Release/: Smoothed-Particle-Hydrodynamics  makefile  objects.mk  owOpenCLConstant.h  sources.mk
Release/debug/src/: subdir.mk
Release/src/: PyramidalSimulation.d  main.d  owHelper.d  owOpenCLSolver.d  owPhysicsFluidSimulator.d  owWorldSimulation.d  subdir.mk
backend/ocl/: CMakeLists.txt  device.h  ocl_helper.cpp
buffers/: README.md
cl_code/: cl_radix_sort.cl  cl_sort.cl  old_ns.cl  sph_cl_code.cl
cl_code/test/: benchmarks.cl
config/: 10x1x1  demo1  demo2  gen_damb_break.py  gen_random_scene.py  simple_converter.py  simple_gen.py  tmp
configuration/: connection.txt  connection_membranes_demo.txt  demo1  demo1_test  demo2  membranes.txt  membranes_membranes_demo.txt  particleMembraneIndex.txt  particleMembraneIndex_membranes_demo.txt  position.txt  positionPureLiquid.txt  position_membranes_demo.txt  velocity.txt  velocityWithElasticMatter.txt  velocity_membranes_demo.txt  worm_alone_half_resolution  worm_no_water_2017.rar
configuration/test/: one_sprig_test  position_liquid.txt  test_energy  velocity_liquid.txt
configuration/test/c302/muscles_c1/: CaPool.mod  GenericCell.hoc  LEMS_c302_C1_Muscles.xml  LEMS_c302_C1_Muscles_nrn.py  Leak.mod  c302_C1_Muscles.nml  ca_boyle.mod  cell_C.xml  elec_syn_10conns.mod  elec_syn_1conns.mod  elec_syn_23conns.mod  elec_syn_2conns.mod  elec_syn_3conns.mod  elec_syn_4conns.mod  elec_syn_5conns.mod  elec_syn_6conns.mod  elec_syn_7conns.mod  exc_syn_10conns.mod  exc_syn_11conns.mod  exc_syn_12conns.mod  exc_syn_13conns.mod  exc_syn_14conns.mod  exc_syn_15conns.mod  exc_syn_16conns.mod  exc_syn_17conns.mod  exc_syn_18conns.mod  exc_syn_19conns.mod  exc_syn_1conns.mod  exc_syn_20conns.mod  exc_syn_21conns.mod  exc_syn_23conns.mod  exc_syn_24conns.mod  exc_syn_25conns.mod  exc_syn_26conns.mod  exc_syn_27conns.mod  exc_syn_2conns.mod  exc_syn_30conns.mod  (+21 more)
configuration/test/one/: test_gravity
docker/: Dockerfile  Makefile
graphics/: CMakeLists.txt  graph.cpp  graph.h  main.cpp
inc/: PyramidalSimulation.h  VectorMath.h  abstract_model.hpp  device.h  gettimeofday.h  graph.h  isolver.h  isort_solver.h  ocl_const.h  ocl_radix_sort.hpp  ocl_solver.hpp  ocl_sort_solver.hpp  ocl_struct.h  owConfigProperty.h  owGL.h  owHelper.h  owINeuronSimulator.h  owNeuronSimulator.h  owOpenCLConstant.h  owOpenCLSolver.h  owPhysicTest.h  owPhysicsConstant.h  owPhysicsFluidSimulator.h  owSignalSimulator.h  owVideoWriter.h  owVtkExport.h  owWorldSimulation.h  particle.h  partition.h  solver_container.hpp  sph_model.hpp
inc/GL/: glut.h
inc/OpenCL/: cl.hpp
inc/util/: abstract_reader.h  arg_parser.h  custom_reader.hpp  json_reader.hpp  ocl_helper.h
spark/: pattern_check.cpp  regcheck  string_test.cpp  template_test.cpp
spark/cl_sort/: cl_sort.cl  error.h  main.cpp  ocl_helper.cpp  ocl_helper.h  ocl_sort_solver.cpp
spark/cpp_hints/: check  check.cpp
src/: .gitignore  PyramidalSimulation.cpp  PyramidalSimulation.h  VectorMath.h  main.cpp  main_sim.py  owConfigProperty.cpp  owConfigProperty.h  owHelper.cpp  owHelper.h  owNeuronSimulator.cpp  owOpenCLConstant.h  owOpenCLSolver.cpp  owOpenCLSolver.h  owPhysicsConstant.h  owPhysicsFluidSimulator.cpp  owPhysicsFluidSimulator.h  owSignalSimulator.cpp  owVideoWriter.cpp  owVtkExport.cpp  owWorldSimulation.cpp  owWorldSimulation.h  plot_positions.py  sibernetic.cpp  sphFluid.cl  sphFluid_crawling.cl  x_engine.cpp
src/c302_realtime/: C302NeuronWrapper.py  NeuronWrapper.py  README.md  __init__.py
src/c302_realtime/helper/: __init__.py  myneuron.py
src/test/: owPhysicTest.cpp  owPhysicTest.h
src/utils/: CMakeLists.txt  arg_parser.cpp  graph.cpp  ocl_helper.cpp
test/: test.cpp
test/py_test/: ns.py
test/py_test/sorting/: radix_impl.py  sort_test.py
utils/: CMakeLists.txt  arg_parser.cpp  arg_parser.h
wcon/: generate_wcon.py  small.wcon  test.wcon  wcon_schema.json
